--- a/index.html
+++ b/index.html
@@ -4,10 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>任務二</title>
+    <link rel="stylesheet" href="./all.scss">
+    <link rel="stylesheet" href="./all.js">
 </head>
 <body>
     <h1>111</h1>
     <h2>222</h2>
+    <h3>333</h3>
 </body>
 </html>
