--- a/index.html
+++ b/index.html
@@ -5,12 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>任務二</title>
-    <link rel="stylesheet" href="./all.scss">
-    <link rel="stylesheet" href="./all.js">
+    <link rel="stylesheet" href="./style/all.scss">
+ 
 </head>
 <body>
-    <h1>111</h1>
+    <h1 class="color">111</h1>
     <h2>222</h2>
     <h3>333</h3>
+
+
+    <script src="./js/all.js"></script>
 </body>
 </html>
