首頁練習(手刻、第1次)
首頁
手刻
第1次練習(3-4天)

--- a/index.html
+++ b/index.html
@@ -5,14 +5,325 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>任務二</title>
-    <link rel="stylesheet" href="./style/all.scss">
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@400;700;900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel="stylesheet" href="./style/SCSS/all.css"/>
  
 </head>
 <body>
-    <h1 class="color">111</h1>
-    <h2>222</h2>
-    <h3>333</h3>
-
+    <div class="container">
+        <div class="header d-flex jcsb aic">
+            <h1 class="logo"><a href="#"><img src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/main/2023web-camp/logo.png" alt="LOGO"></img></a></h1>
+            <div class="nav"><a class="lh1_5 pr-20" href="#">首頁</a><a class="lh1_5" href="#">定價</a></div>
+            <div class="nav-icon">
+                <a href=""><span class="material-icons fz-24">menu</span></a>
+            </div>
+        </div>
+        <div class="main">
+            <h2 class="fw-block fz-m-48">
+                透過 <br>
+                AI 工具王的 <br>
+                強大模型 <br>
+                讓您的業務更聰明
+            </h2>
+            <a class="btn-start" href="#">開始使用</a>
+            <div class="effect d-flex jcfe jcc-s">
+                <img src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/main/2023web-camp/deco.png" alt="">
+                <img src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/main/2023web-camp/deco.png" alt="">
+                <img src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/main/2023web-camp/deco.png" alt="">
+            </div>
+        </div>
+        <div class="sever fw-block">
+            <div class="sever-title d-flex jcsb fxdc-s">
+                <h5 class="fz-32 fz-s-20 pb-s-24">我們的服務</h5>
+                <h4 class="fz-48 fz-s-32">我們相信透過 AI 技術，
+      包括圖像識別、自然語言處理和機器翻譯等，讓您更快、更準確地做出決策。</h4>
+            </div>
+            <ul class="sever-list d-flex jcsb fxww-s">
+                <li class="sever-listCard">
+                    <span class="material-icons fz-80 pb-20">flash_on</span>
+                    <h5 class="fz-32 pb-20">快速</h5>
+                    <p class="fw-regular lh1_5 fz-16">我們先進的推理基礎設施提供了極短的響應時間，讓你的產品服務不間斷。</p>
+                </li>
+                <li class="sever-listCard">
+                    <span class="material-icons fz-80 pb-20">auto_awesome</span>
+                    <h5 class="fz-32 pb-20">靈活</h5>
+                    <p class="fw-regular lh1_5 fz-16">我們的服務可以根據您的需求進行靈活調整，同時還可以滿足不同項目和預算的需求。</p>
+                </li>
+                <li class="sever-listCard">
+                    <span class="material-icons fz-80 pb-20">library_add</span>
+                    <h5 class="fz-32 pb-20">擴充</h5>
+                    <p class="fw-regular lh1_5 fz-16">我們的服務支持多種擴充選項，可以滿足您的不斷增長的 AI 需求。</p>
+                </li>
+            </ul>
+        </div>
+        <div class="partner">
+            <h5 class="fz-32 fw-block pb-80">來自合作夥伴</h5>
+            <div class="partner-logo pb-20">
+                <img src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/main/2023web-camp/enterprise6.png" alt="logo">
+                <img src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/main/2023web-camp/enterprise1.png" alt="logo">
+                <img src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/main/2023web-camp/enterprise2.png" alt="logo">
+                <img src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/main/2023web-camp/enterprise3.png" alt="logo">
+                <img src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/main/2023web-camp/enterprise4.png" alt="logo">
+                <img src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/main/2023web-camp/enterprise5.png" alt="logo">
+                <img src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/main/2023web-camp/enterprise6.png" alt="logo">
+            </div>
+            <div class="partner-logo ml-20">
+                <img src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/main/2023web-camp/enterprise7.png" alt="logo">
+                <img src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/main/2023web-camp/enterprise8.png" alt="logo">
+                <img src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/main/2023web-camp/enterprise9.png" alt="logo">
+                <img src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/main/2023web-camp/enterprise.png" alt="logo">
+                <img src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/main/2023web-camp/enterprise11.png" alt="logo">
+                <img src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/main/2023web-camp/enterprise12.png" alt="logo">
+                <img src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/main/2023web-camp/enterprise7.png" alt="logo">
+            </div>
+            <ul class="partner-message d-flex jcsb fxww-s">
+                <li class="partner-messageCard">
+                    <span class="material-icons fz-16">star</span>
+                    <span class="material-icons fz-16">star</span>
+                    <span class="material-icons fz-16">star</span>
+                    <span class="material-icons fz-16">star</span>
+                    <span class="material-icons fz-16">star</span>
+                    <p class=" fz-16 lh1_5 pt-20">非常喜歡 AI工具王 提供的 AI 模型租賃服務，使用起來非常方便，而且效果非常好。對於我們公司的業務來說，這個服務非常重要，因為我們需要大量的數據進行分析和預測，AI工具王 提供的 AI 模型能夠幫助我們節省大量時間和成本，實在是太棒了！</p>
+                    <div class="partner-messageCard-bottom d-flex pt-20">
+                        <img class="pr-16" src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/main/2023web-camp/avatar3.png" alt="人像圖">
+                        <div class="messageCard-name">
+                            <p class="fz-16 lh1_5 fw-bold pb-4">陳小姐</p>
+                            <p class="fz-14 lh1_5">ABC科技有限公司</p>
+                        </div>
+                    </div>
+                </li>
+                <li class="partner-messageCard">
+                    <span class="material-icons fz-16">star</span>
+                    <span class="material-icons fz-16">star</span>
+                    <span class="material-icons fz-16">star</span>
+                    <span class="material-icons fz-16">star</span>
+                    <span class="material-icons fz-16">star</span>
+                    <p class=" fz-16 lh1_5 pt-20">作為一家醫療器材公司，我們非常關注人工智能技術的應用，而 AI工具王 提供的 AI 模型租賃服務為我們帶來了很大的幫助。我們使用 AI工具王 的模型進行醫學影像分析和預測，這些模型非常精確，能夠幫助我們更好地診斷病情，提高治療效果。感謝 AI工具王 團隊的辛勤工作！</p>
+                    <div class="partner-messageCard-bottom d-flex pt-20">
+                        <img class="pr-16" src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/main/2023web-camp/avatar1.png" alt="人像圖">
+                        <div class="messageCard-name">
+                            <p class="fz-16 lh1_5 fw-bold pb-4">劉小姐</p>
+                            <p class="fz-14 lh1_5">XYZ 醫療器材有限公司</p>
+                        </div>
+                    </div>
+                </li>
+                <li class="partner-messageCard">
+                    <span class="material-icons fz-16">star</span>
+                    <span class="material-icons fz-16">star</span>
+                    <span class="material-icons fz-16">star</span>
+                    <span class="material-icons fz-16">star</span>
+                    <span class="material-icons fz-16">star</span>
+                    <p class="fz-16 lh1_5 pt-20">我們銀行一直在尋找能夠幫助我們提高風險控制和客戶服務的解決方案，而 AI工具王 提供的 AI 模型租賃服務正好滿足了我們的需求。我們使用 AI工具王 的模型進行客戶信用評估和詐騙檢測等任務，這些模型非常準確，能夠幫助我們更好地控制風險，提高客戶滿意度。非常感謝 AI工具王 團隊的支持！</p>
+                    <div class="partner-messageCard-bottom d-flex pt-20">
+                        <img class="pr-16" src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/main/2023web-camp/avatar2.png" alt="人像圖">
+                        <div class="messageCard-name">
+                            <p class="fz-16 lh1_5 fw-bold pb-4">黃先生</p>
+                            <p class="fz-14 lh1_5">EFG 銀行</p>
+                        </div>
+                    </div>
+                </li>
+            </ul>
+        </div>
+    </div>
+    <div class="content">
+        <div class="container">
+            <h3 class="fz-80 fz-s-32 fw-block pb-80 pb-s-32">這些超酷的應用，都來自 AI工具王</h3>
+            <div class="search d-flex aic mb-24 mb-s-16">
+                <span class="material-icons fz-24 saerchRgb pt-12">search</span>
+                <input class="search-tool fz-24 lh1_5 fw-regular" type="search" name="searchNav" id="searchNav" placeholder="輸入關鍵字搜尋">
+            </div>
+            <div class="selectAd d-flex jcsb fxww-s aic">
+                <div class="selectAd-itemsAll mb-s-24">
+                    <select name="selectAll" id="selectAll">
+                        <option value="篩選">篩選
+                        <span class="material-icons selectRgb fz-16">filter_alt</span>
+                        </option>
+                        <optgroup class="optg-style fw-bold" label="AI 模型">
+                            <option value="all-AI">所有模型</option>
+                            <option value="CACA">卡卡</option>
+                            <option value="JJ">杰杰</option>
+                            <option value="CICI">琪琪</option>
+                            <option value="HAOHAO">昊昊</option>
+                        </optgroup>
+                        <optgroup class="fw-bold" label="類型">
+                            <option value="all-type">所有類型</option>
+                            <option value="talk">聊天</option>
+                            <option value="image">影像辨識</option>
+                            <option value="rendition">翻譯</option>
+                            <option value="marketing">行銷</option>
+                            <option value="service">客服</option>
+                            <option value="prolificacy">生產力</option>
+                        </optgroup>
+                    </select>
+                </div>
+                <div class="selectAd-nav d-flex">
+                    <button>全部</button>
+                    <button>聊天</button>
+                    <button>影像辨識</button>
+                    <button>翻譯</button>
+                    <button>行銷</button>
+                    <button>客服</button>
+                    <button>生產力</button>
+                </div>
+                <div class="selectAd-Newold mb-s-24">
+                    <select name="" id="">
+                        <option value="newtoold">由新到舊</option>
+                        <option value="oldtonew">由舊到新</option>
+                        <span class="material-icons selectRgb fz-16">keyboard_arrow_down</span>
+                    </select>
+                </div>
+            </div>
+            <ul class="content_list d-flex jcsb fxww">
+                <li class="content_list-card mb-24 mb-s-12">
+                    <div class="content_list-card-img">
+                        <a href=""><img src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/main/2023web-camp/tool1.png" alt="主題"></a>
+                    </div>
+                    <div class="content_list-card-title">
+                        <p class="fz-20 fw-bold pb-12">Chatbot Builder</p>
+                        <p class="fz-14 fw-regular cardRgb">建立智能化的聊天機器人，解答常見問題、提供客戶支援、收集反饋等。</p>
+                    </div>
+                    <div class="content_list-card-body d-flex jcsb aic">
+                        <p class="fw-bold">AI 模型</p>
+                        <p>卡卡</p>
+                    </div>
+                    <div class="content_list-card-body d-flex jcsb aic">
+                        <p>#聊天</p>
+                        <span class="material-icons">share</span>
+                    </div>
+                </li>
+                <li class="content_list-card mb-24 mb-s-12">
+                    <div class="content_list-card-img">
+                        <a href=""><img src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/main/2023web-camp/tool2.png" alt="主題"></a>
+                    </div>
+                    <div class="content_list-card-title">
+                        <p class="fz-20 fw-bold pb-12">Image Recognition Platform</p>
+                        <p class="fz-14 fw-regular cardRgb">專業的圖像識別平台，識別圖像、分類、標記等。          </p> <br>
+                    </div>
+                    <div class="content_list-card-body d-flex jcsb aic">
+                        <p class="fw-bold">AI 模型</p>
+                        <p>杰杰</p>
+                    </div>
+                    <div class="content_list-card-body d-flex jcsb aic">
+                        <p>#影像辨識</p>
+                        <span class="material-icons">share</span>
+                    </div>
+                </li>
+                <li class="content_list-card mb-24 mb-s-12">
+                    <div class="content_list-card-img">
+                        <a href=""><img src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/main/2023web-camp/tool3.png" alt="主題"></a>
+                    </div>
+                    <div class="content_list-card-title">
+                        <p class="fz-20 fw-bold pb-12">Language Translation API</p>
+                        <p class="fz-14 fw-regular cardRgb">專業的語言翻譯 API，實現文本翻譯功能，支援多種格式的文本。</p>
+                    </div>
+                    <div class="content_list-card-body d-flex jcsb aic">
+                        <p class="fw-bold">AI 模型</p>
+                        <p>琪琪</p>
+                    </div>
+                    <div class="content_list-card-body d-flex jcsb aic">
+                        <p>#翻譯</p>
+                        <span class="material-icons">share</span>
+                    </div>
+                </li>
+                <li class="content_list-card mb-s-12">
+                    <div class="content_list-card-img">
+                        <a href=""><img src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/main/2023web-camp/tool4.png" alt="主題"></a>
+                    </div>
+                    <div class="content_list-card-title">
+                        <p class="fz-20 fw-bold pb-12">Sentiment Analysis API</p>
+                        <p class="fz-14 fw-regular cardRgb">自動識別文本中的情感傾向，包括正向、負向和中性等。適用於情感分析、社交媒體監控、市場調查等。</p>
+                    </div>
+                    <div class="content_list-card-body d-flex jcsb aic">
+                        <p class="fw-bold">AI 模型</p>
+                        <p>昊昊</p>
+                    </div>
+                    <div class="content_list-card-body d-flex jcsb aic">
+                        <p>#行銷</p>
+                        <span class="material-icons">share</span>
+                    </div>
+                </li>
+                <li class="content_list-card mb-s-12">
+                    <div class="content_list-card-img">
+                        <a href=""><img src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/main/2023web-camp/tool5.png" alt="主題"></a>
+                    </div>
+                    <div class="content_list-card-title">
+                        <p class="fz-20 fw-bold pb-12">Fraud Detection Platform</p>
+                        <p class="fz-14 fw-regular cardRgb">預防詐騙活動，適用於銀行、金融、電商等。</p>
+                        <br>
+                    </div>
+                    <div class="content_list-card-body d-flex jcsb aic">
+                        <p class="fw-bold">AI 模型</p>
+                        <p>卡卡</p>
+                    </div>
+                    <div class="content_list-card-body d-flex jcsb aic">
+                        <p>#客服</p>
+                        <span class="material-icons">share</span>
+                    </div>
+                </li>
+                <li class="content_list-card">
+                    <div class="content_list-card-img">
+                        <a href=""><img src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/main/2023web-camp/tool6.png" alt=""></a>
+                    </div>
+                    <div class="content_list-card-title">
+                        <p class="fz-20 fw-bold pb-12">Voice Assistant SDK</p>
+                        <p class="fz-14 fw-regular cardRgb">通過語音控制應用程式、設備，實現多種功能，例如播放音樂、查詢天氣、發送信息等。</p>
+                    </div>
+                    <div class="content_list-card-body d-flex jcsb aic">
+                        <p class="fw-bold">AI 模型</p>
+                        <p>杰杰</p>
+                    </div>
+                    <div class="content_list-card-body d-flex jcsb aic">
+                        <p>#生產力</p>
+                        <span class="material-icons">share</span>
+                    </div>
+                </li>
+            </ul>
+            <div class="content-btn d-flex jcfe aic">
+                <button>1</button>
+                <button>2</button>
+                <button>3</button>
+                <button>4</button>
+                <button>5</button>
+                <button><span class="material-icons fz-16">keyboard_arrow_right</span></button>
+            </div>
+        </div>
+    </div>
+    <div class="container">
+        <div class="use">
+            <div class="use-top">
+                <h4 class="fz-48 fz-s-32 fw-block pb-40">現在就來建立屬於你的服務吧</h4>
+                <a class="use-top-btn fz-20 fw-block" href="#">開始使用<span class="material-icons fz-24 pl-12">call_made</span>
+                </a>
+            </div>
+            <div class="use-bottom d-flex jcsb fxdcr-s">
+                <div class="use-bottom-sideL">
+                    <a href="#">
+                        <h3 class="fz-80 fz-s-48 fw-block pb-8">首頁</h3>
+                    </a>
+                    <a href="#">
+                        <h3 class="fz-80 fz-s-48 fw-block">定價</h3>
+                    </a>
+                </div>
+                <div class="use-bottom-sideR pb-s-40">
+                    <a href="#"><img src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/main/2023web-camp/logo.png" alt="logo"></a>
+                </div>
+            </div>
+        </div>
+        <div class="footer fz-16 lh1_5 fw-bold d-flex jcsb aic aifs-s">
+            <div class="footer-sideL d-flex jcsb aic aifs-s fxdc-s">
+                <p class="pr-100 pb-s-24">AI工具王 © 2023</p>
+                <div class="footer-sideL-link d-flex">
+                <a href="#">Facebook</a>
+                <a href="#">Twitter</a>
+                <a href="#">Instagram</a>
+                </div>
+            </div>
+            <div class="footer-sideR d-flex aic mt-s-8">
+                <a href="#">Back to top<span class="material-icons fz-16 pl-12">arrow_upward</span></a>
+            </div>
+        </div>
+    </div>
 
     <script src="./js/all.js"></script>
 </body>
