依照助教建議修改60%
1.SCSS分區塊
2.button加上type ="button"
3.加上 overflow-x: auto，讓區塊在手機版型時能夠左右滑動
4. .content_list-card在li區塊就觸發hover效果

--- a/index.html
+++ b/index.html
@@ -4,9 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>任務二</title>
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@400;700;900&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <title>任務二-Home</title>
     <link rel="stylesheet" href="./style/SCSS/all.css"/>
  
 </head>
@@ -158,13 +156,13 @@
                     </select>
                 </div>
                 <div class="selectAd-nav d-flex">
-                    <button>全部</button>
-                    <button>聊天</button>
-                    <button>影像辨識</button>
-                    <button>翻譯</button>
-                    <button>行銷</button>
-                    <button>客服</button>
-                    <button>生產力</button>
+                    <button type="button">全部</button>
+                    <button type="button">聊天</button>
+                    <button type="button">影像辨識</button>
+                    <button type="button">翻譯</button>
+                    <button type="button">行銷</button>
+                    <button type="button">客服</button>
+                    <button type="button">生產力</button>
                 </div>
                 <div class="selectAd-Newold mb-s-24">
                     <select name="" id="">
@@ -280,12 +278,12 @@
                 </li>
             </ul>
             <div class="content-btn d-flex jcfe aic">
-                <button>1</button>
-                <button>2</button>
-                <button>3</button>
-                <button>4</button>
-                <button>5</button>
-                <button><span class="material-icons fz-16">keyboard_arrow_right</span></button>
+                <button type="button">1</button>
+                <button type="button">2</button>
+                <button type="button">3</button>
+                <button type="button">4</button>
+                <button type="button">5</button>
+                <button type="button"><span class="material-icons fz-16">keyboard_arrow_right</span></button>
             </div>
         </div>
     </div>
