--- a/priching.html
+++ b/priching.html
@@ -8,6 +8,38 @@
     <link rel="stylesheet" href="./style/SCSS/all.css">
 </head>
 <body>
-    <h1>123</h1>
+    <div class="container">
+        <div class="header"></div>
+        <div class="priching-main">
+            <h2 class="fw-block pb-80 pb-s-64">用多少，<br>
+                付多少。
+            </h2>
+            <div class="priching-main-side d-flex jcfe">
+                <h4 class="fw-block fz-48 fz-s-28">我們相信，最靈活的取用機制，才能最大化的幫助你業務的推動。</h4>
+            </div>
+            <!--不包div僅以h4給class，width:50%無法作動-->
+            <div class="effect d-flex jcc-s">
+                <img src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/main/2023web-camp/deco.png" alt="">
+                <img src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/main/2023web-camp/deco.png" alt="">
+                <img src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/main/2023web-camp/deco.png" alt="">
+            </div>
+        </div>
+        <div class="price"></div>
+        <div class="norm"></div>
+    </div>
+    <div class="content">
+        <h3></h3>
+        <div class="search"></div>
+        <div class="selectAd"></div>
+        <div class="content_list"></div>
+        <div class="content-btn"></div>
+    </div>
+    <div class="container">
+        <div class="qa"></div>
+        <div class="footer"></div>
+    </div>
+
+
+    <script src="./js/all.js"></script>
 </body>
 </html>
