--- a/priching.html
+++ b/priching.html
@@ -24,7 +24,83 @@
                 <img src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/main/2023web-camp/deco.png" alt="">
             </div>
         </div>
-        <div class="price"></div>
+        <div class="price">
+            <h5 class="fw-block fz-32 fz-s-20 pb-80 pb-s-24">定價</h5>
+            <ul class="price-menu d-flex fxww">
+                <li class="price-menu_card">
+                    <div class="price-menu_cardTitle">
+                        <h5 class="fw-block fz-32 pb-12">琪琪</h5>
+                        <p>初級</p>
+                        <p>速度最快</p>
+                    </div>
+                    <div class="price-menu_cardBody d-flex aic jcsb pt-20">
+                        <div class="price-menu_cardBodyL d-flex aic">
+                            <p class="fw-block">NT$5</p>
+                            <p class="saerchRgb">／1k tokens</p>
+                        </div>
+                        <div class="price-menu_cardBodyR">
+                            <a class="fw-bold" href="#">開始使用
+                                <span class="material-icons fz-16 pl-12">call_made</span>
+                            </a>
+                        </div>
+                    </div>
+                </li>
+                <li class="price-menu_card">
+                    <div class="price-menu_cardTitle">
+                        <h5 class="fw-block fz-32 pb-12">昊昊</h5>
+                        <p>中級</p>
+                        <br>
+                    </div>
+                    <div class="price-menu_cardBody d-flex aic jcsb pt-20">
+                        <div class="price-menu_cardBodyL d-flex aic">
+                            <p class="fw-block">NT$5</p>
+                            <p class="saerchRgb">／1k tokens</p>
+                        </div>
+                        <div class="price-menu_cardBodyR">
+                            <a class="fw-bold" href="#">開始使用
+                                <span class="material-icons fz-16 pl-12">call_made</span>
+                            </a>
+                        </div>
+                    </div>
+                </li>
+                <li class="price-menu_card">
+                    <div class="price-menu_cardTitle">
+                        <h5 class="fw-block fz-32 pb-12">卡卡</h5>
+                        <p>高級</p>
+                        <br>
+                    </div>
+                    <div class="price-menu_cardBody d-flex aic jcsb pt-20">
+                        <div class="price-menu_cardBodyL d-flex aic">
+                            <p class="fw-block">NT$5</p>
+                            <p class="saerchRgb">／1k tokens</p>
+                        </div>
+                        <div class="price-menu_cardBodyR">
+                            <a class="fw-bold" href="#">開始使用
+                                <span class="material-icons fz-16 pl-12">call_made</span>
+                            </a>
+                        </div>
+                    </div>
+                </li>
+                <li class="price-menu_card">
+                    <div class="price-menu_cardTitle">
+                        <h5 class="fw-block fz-32 pb-12">杰杰</h5>
+                        <p>最高級</p>
+                        <p>資訊最完善</p>
+                    </div>
+                    <div class="price-menu_cardBody d-flex aic jcsb pt-20">
+                        <div class="price-menu_cardBodyL d-flex aic">
+                            <p class="fw-block">NT$5</p>
+                            <p class="saerchRgb">／1k tokens</p>
+                        </div>
+                        <div class="price-menu_cardBodyR">
+                            <a class="fw-bold" href="#">開始使用
+                                <span class="material-icons fz-16 pl-12">call_made</span>
+                            </a>
+                        </div>
+                    </div>
+                </li>
+            </ul>
+        </div>
         <div class="norm"></div>
     </div>
     <div class="content">
