--- a/priching.html
+++ b/priching.html
@@ -101,14 +101,36 @@
                 </li>
             </ul>
         </div>
-        <div class="norm"></div>
+        <div class="norm d-flex jcsb fxdc-s">
+            <h5 class="fw-block fz-32 fz-s-20">使用規範</h5>
+            <ul class="norm-list">
+                <li>
+                    <h4 class="fw-block fz-48 fz-s-32 pb-24">守法</h4>
+                    <p class="fz-32 fz-s-16">請遵守相關的法規和政策，不得進行任何違法違規的活動。</p>
+                </li>
+                <li>
+                    <h4 class="fw-block fz-48 fz-s-32 pb-24">資訊安全</h4>
+                    <p class="fz-32 fz-s-16">請務必保護好自己的帳號和密碼，不得將其透露給他人。</p>
+                </li>
+                <li>
+                    <h4 class="fw-block fz-48 fz-s-32 pb-24">守密</h4>
+                    <p class="fz-32 fz-s-16">需對使用過程中產生的數據負責，不得擅自泄露數據。</p>
+                </li>
+            </ul>
+        </div>
     </div>
     <div class="content">
-        <h3></h3>
-        <div class="search"></div>
-        <div class="selectAd"></div>
-        <div class="content_list"></div>
-        <div class="content-btn"></div>
+        <div class="container">
+            <h3 class="fw-block fz-80 fz-s-32 pb-80 pb-s-32">這些超酷的應用，都來自 AI工具王</h3>
+            <div class="search saerchRgb d-flex aic mb-24 mb-s-16">
+                <span class="material-icons fz-24 pr-12">search</span>
+                <input class="search-tool fz-16 lh1_5" type="search" name="searchNav" id="searchNav" placeholder="輸入關鍵字搜尋">
+                <!--placeholder=""為預設底文字、-->
+            </div>
+            <div class="selectAd"></div>
+            <div class="content_list"></div>
+            <div class="content-btn"></div>
+        </div>
     </div>
     <div class="container">
         <div class="qa"></div>
