--- a/priching.html
+++ b/priching.html
@@ -6,6 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>任務二-Priching</title>
     <link rel="stylesheet" href="./style/SCSS/all.css">
+    <script
+  src="https://code.jquery.com/jquery-3.7.0.min.js"
+  integrity="sha256-2Pmvv0kuTBOenSvLm6bvfBSSHrUJ+3A7x6P5Ebd07/g="
+  crossorigin="anonymous"></script>
+    <script src="./js/all.js"></script>
 </head>
 <body>
     <div class="container">
