任務二-index 完成
補上下拉選單、Backtotop-jQuery

--- a/index.html
+++ b/index.html
@@ -139,25 +139,25 @@
             <div class="selectAd d-flex jcsb fxww-s aic">
                 <div class="selectAd-itemsAll selectRgb fz-16 lh1_5">
                     <button class="selectAd-itemsAll-btn d-flex aic">
-                        <span class="pr-12">篩選</span>
+                        <span class="itemsAll-btn-title pr-12">篩選</span>
                         <span class="material-icons selectRgb fz-16">filter_alt</span>
                     </button>
                     <ul class="selectAd-itemsAll-list">
                         <li class="saerchRgb fz-12 lh1_5 fw-bold pl-40 pb-4">AI 模型</li>
-                        <li><a href="#">所有模型</a></li>
-                        <li><a href="#">卡卡</a></li>
-                        <li><a href="#">杰杰</a></li>
-                        <li><a href="#">琪琪</a></li>
-                        <li><a class="itemsAll-list-btm" href="#">昊昊</a></li>
+                        <li><a class="itemsAll-btn-other" href="#">所有模型</a></li>
+                        <li><a class="itemsAll-btn-other" href="#">卡卡</a></li>
+                        <li><a class="itemsAll-btn-other" href="#">杰杰</a></li>
+                        <li><a class="itemsAll-btn-other" href="#">琪琪</a></li>
+                        <li><a class="itemsAll-btn-other" class="itemsAll-list-btm" href="#">昊昊</a></li>
                         <!---->
                         <li class="saerchRgb fz-12 lh1_5 fw-bold pl-40 pb-4 pt-40">類型</li>
-                        <li><a href="#">全部</a></li>
-                        <li><a href="#">聊天</a></li>
-                        <li><a href="#">影像辨識</a></li>
-                        <li><a href="#">翻譯</a></li>
-                        <li><a href="#">行銷</a></li>
-                        <li><a href="#">客服</a></li>
-                        <li><a href="#">生產力</a></li>
+                        <li><a class="itemsAll-btn-other" href="#">全部</a></li>
+                        <li><a class="itemsAll-btn-other" href="#">聊天</a></li>
+                        <li><a class="itemsAll-btn-other" href="#">影像辨識</a></li>
+                        <li><a class="itemsAll-btn-other" href="#">翻譯</a></li>
+                        <li><a class="itemsAll-btn-other" href="#">行銷</a></li>
+                        <li><a class="itemsAll-btn-other" href="#">客服</a></li>
+                        <li><a class="itemsAll-btn-other" href="#">生產力</a></li>
                     </ul>
                 </div>
                 <!-- <div class="selectAd-itemsAll mb-s-24">
@@ -356,7 +356,7 @@
                 </div>
             </div>
             <div class="footer-sideR d-flex aic mt-s-8">
-                <a href="#">Back to top<span class="material-icons fz-16 pl-12">arrow_upward</span></a>
+                <a id="a" class="back_to_top" href="#">Back to top<span class="material-icons fz-16 pl-12">arrow_upward</span></a>
             </div>
         </div>
     </div>
